# hpe-org-doc-transformer

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
.github/workflows/: deploy-doc-query.yml
app/db/: chunks.py
app/services/: llm_service.py  retrieval_service.py
doc-ai-agent/: .env  .env.example  Makefile  docker-compose.yml  init.sql  main.py  pyproject.toml
doc-ai-agent/scripts/: seed_dummy_data.py  setup_replication.py
doc-ai-agent/services/agent/: main.py  pyproject.toml
doc-ai-agent/services/classifier/: actions.py  classifier.py  duplicate_check.py  main.py  pyproject.toml
doc-ai-agent/services/classifier/classifier/: classifier.py
doc-ai-agent/services/connector/: main.py  pyproject.toml
doc-ai-agent/services/mcp-server/: main.py  pyproject.toml
doc-ai-agent/services/mcp-server/services/: github_service.py  search_service.py
doc-ai-agent/services/normaliser/: main.py  pyproject.toml
doc-ai-agent/services/orchestrator/: formatting.py  main.py  pyproject.toml  test_data.py
doc-ai-agent/services/orchestrator/graph/: main_graph.py  workflow.py
doc-ai-agent/services/worker/: main.py  pyproject.toml
doc-ingestion/: confluenceEnrichment.js  package-lock.json  package.json
doc-ingestion/consumer/handlers/: githubHandler.js
doc-ingestion/normalization/: normalizationConsumer.js
doc-ingestion/normalization/normalizers/: confluenceNormalizer.js
doc-query/: README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  requirements.txt
doc-query/app/: main.py
doc-query/app/api/: search.py
doc-query/app/db/: connection.py  utils.py
doc-query/app/models/: search_models.py
doc-query/app/services/: llm_service.py  prompts.py  reranking_service.py  retrieval_service.py
doc-query/frontend/: index.html  nginx.conf  package-lock.json
doc-query/frontend/src/: App.css
doc-query/frontend/src/components/: ChatArea.jsx  DocumentViewer.jsx  Message.jsx
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatArea.jsx  DocumentViewer.jsx  Message.jsx
project/: confluenceEnrichment.js  fix.js  githubenrichment.js  jiraEnrichment.js  package-lock.json  package.json  t.java
project/consumer/: hashStore.js
project/consumer/handlers/: confluenceHandler.js  githubHandler.js  jiraHandler.js
project/consumer/utils/: diffExtractor.js  readmeParser.js
project/normalization/: schema.js
project/normalization/normalizers/: githubNormalizer.js  jiraNormalizer.js  miroNormalizer.js
(+7 files in other folders)
