[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"config",
	"doc-types",
	"langchain>=1.2.17",
	"langchain-google-genai>=4.2.2",
	"langgraph>=1.1.10",
]

[tool.uv.sources]
config = { workspace = true }
doc-types = { workspace = true }
