[project]
name = "classifier"
version = "0.1.0"
description = "Document classification service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"config",
	"doc-types",
	"embedding",
	"db",
]

[tool.uv.sources]
config = { workspace = true }
embedding = { workspace = true }
doc-types = { workspace = true }
db = { workspace = true }
