[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "config",
    "doc-types",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
]

[tool.uv.sources]
doc-types = { workspace = true }
config = { workspace = true }
